--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Data Persistence Challenge",
   "main": "index.js",
   "scripts": {
+    "server": "nodemon index.js",
     "test": "cross-env NODE_ENV=testing jest --watch --verbose --runInBand --silent"
   },
   "repository": {
@@ -18,7 +19,9 @@
     "supertest": "^6.0.1"
   },
   "dependencies": {
+    "express": "^4.17.1",
     "knex": "^0.21.16",
+    "nodemon": "^2.0.7",
     "sqlite3": "^5.0.1"
   }
 }
